Fixed cut off logo

--- a/jenkins-isotope-style.css
+++ b/jenkins-isotope-style.css
@@ -21,8 +21,8 @@ h1, h2, h3, h4, h5, h6 {
   #top-panel td > a {
     background: url("http://di3mex.github.com/jenkins-isotope-style/logo.png") 0 0 no-repeat;
     display: block;
-    width: 130px;
-    height: 40px;
+    width: 356px;
+    height: 62px;
     margin: 10px 0 0 10px; }
     #top-panel td > a img {
       display: none; }
